--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <table width=95% border="1" align="center">
  <tr>
  <td width=18% align="center">
- <a href="http://www.kuratorium.gda.pl" target="strony">Kuratorium</a>
+ <a href="http://www.kuratorium.gda.pl" target="strony">Kuratorium Gdańsk</a>
  <br>
  <a href="http://www.zse.gda.pl" target="strony">ZSE Gdańsk</a>
  </td>
