--- a/start.html
+++ b/start.html
@@ -3,7 +3,7 @@
  <meta charset="utf-8">
  </head>
 <body>
- <h1 align="center">13 Tech. Gdańsk<br>przyjazna szkoła<br>Gdańsk, 24 lutego 2014 r.</h1>
- <marquee bgcolor="red">Pozdrowienia</marquee>
+ <h1 align="center">13 Technikum Gdańsk<br>przyjazna szkoła<br>Gdańsk, 13 Grudnia 2024 r.</h1>
+ <marquee bgcolor="red">Pozdrowienia z ZSE</marquee>
 </body>
 </html>
