--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
  <meta charset="utf-8">
 </head>
 <body>
+ <table width=100% border="1" align="center">
+  NAGłÓWEK
 <table width=95% border="1" align="center">
  <tr>
  <td width=18% align="center">
