--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 </head>
 <body>
  <table width=100% border="1" align="center">
-  NAGłÓWEK
+  <tr>
+   <td width=18% align="center">
+    Nagłówek
+   </td>
+  </tr>
 <table width=95% border="1" align="center">
  <tr>
  <td width=18% align="center">
