--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <tr>
    <td width=18% align="center">
     Nagłówek
+    <br>
    </td>
   </tr>
+ </table>
 <table width=95% border="1" align="center">
  <tr>
  <td width=18% align="center">
@@ -23,5 +25,13 @@
  </td>
  </tr>
 </table>
+  <table width=100% border="1" align="center">
+    <tr>
+   <td width=18% align="center">
+    Stopka
+    <br>
+   </td>
+  </tr>
+ </table>
 </body>
 </html>
