--- a/index.html
+++ b/index.html
@@ -1,33 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
- <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <title>Layout Strony</title>
 </head>
 <body>
-<table width=65% border="1" align="center">
-<td colspan="3">
- <b>nagłówek</b>, 3-kolumny scalone
-</td>
- </tr> 
-<tr>
- <td width=18% align="center">
- <b>lewe menu</b>
- <br><a href="http://www.kuratorium.gda.pl/" target="strony">Kuratorium</a>
- <br>
- <a href="http://www.zse.gda.pl/" target="strony">ZSE Gdańsk</a>
- </td>
- <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
- </td>
-<td width=18% align="center">
- <b>prawe menu</b> 
-<br><a href="start.html" target="strony">Start</a>
-<tr>
- <td colspan="3">
- <b>stopka</b>, 3-kolumny scalone
- </td>
- </tr>
- </td>
- </tr>
-</table>
+    <!-- Tabela z layoutem -->
+    <table width="65%" border="1" align="center">
+        <tr>
+            <td colspan="3" align="center">
+                <b>LOGO-Jasinski</b><br>
+                Gdańsk, 20-01-2025 (wpisz aktualną datę)
+            </td>
+        </tr>
+        <tr>
+            <td width="18%" align="center">
+                <b>lewe menu</b>
+                <ul>
+                    <li><a href="https://zse.edu.gdansk.pl/" target="obszar_glowny">Strona ZSE</a></li>
+                    <li><a href="https://www.kuratorium.gda.pl/" target="obszar_glowny">Kuratorium</a></li>
+                    <li><a href="https://simple.wikipedia.org/" target="obszar_glowny">Simple Wikipedia</a></li>
+                 <li><a href="https://www.wikipedia.org/" target="obszar_glowny">Wikipedia</a></li>
+                </ul>
+            </td>
+            <td align="center">
+                <iframe width="650" height="420" name="obszar_glowny" src="glowny_twoje_nazwisko.html" scrolling="yes" border="0"></iframe>
+                <b>OBASZAR GŁÓWNY</b>
+            </td>
+            <td width="18%" align="center">
+                <b>prawe menu</b>
+                <ul>
+                    <li><a href="plik_do_pobrania.html" download>Kliknij, aby ściągnąć plik</a></li>
+                    <li><a href="tabela_twoje_nazwisko.html" target="obszar_glowny">Kliknij, aby zobaczyć tabelę</a></li>
+                    <li><a href="formularz_twoje_nazwisko.html" target="obszar_glowny">Kliknij, aby zobaczyć formularz</a></li>
+                    <li><a href="mailto:twojemail@example.com">Kliknij, aby wysłać pocztę</a></li>
+                    <li><a href="z1_z6_twoje_nazwisko.html" target="obszar_glowny">Zadania od Z1 do Z6</a></li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="3" align="center">
+                <b>STOPKA-Jasinski</b><br>
+                Gdańsk, 20-01-2025 (wpisz aktualną datę)
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
