--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <td width="18%" align="center">
                 <b>prawe menu</b>
                 <ul>
-                    <li><a href="plik_do_pobrania.html" download>Kliknij, aby ściągnąć plik</a></li>
-                    <li><a href="tabela_twoje_nazwisko.html" target="obszar_glowny">Kliknij, aby zobaczyć tabelę</a></li>
-                    <li><a href="formularz_twoje_nazwisko.html" target="obszar_glowny">Kliknij, aby zobaczyć formularz</a></li>
-                    <li><a href="mailto:twojemail@example.com">Kliknij, aby wysłać pocztę</a></li>
+                    <li><a href="plik_Jasinski.html" download>Kliknij, aby ściągnąć plik</a></li>
+                    <li><a href="tabela_Jasinski.html" target="obszar_glowny">Kliknij, aby zobaczyć tabelę</a></li>
+                    <li><a href="formularz_Jasinski.html" target="obszar_glowny">Kliknij, aby zobaczyć formularz</a></li>
+                    <li><a href="mailto:szymonjas3@gmail.com">Kliknij, aby wysłać pocztę</a></li>
                     <li><a href="z1_z6_twoje_nazwisko.html" target="obszar_glowny">Zadania od Z1 do Z6</a></li>
                 </ul>
             </td>
