--- a/index.html
+++ b/index.html
@@ -81,22 +81,22 @@
                 <b>prawe menu</b>
                 <div class="menu-figura">
                     <a href="kalinowski_zip" download>
-                        <div id="niebieski_prostokat"></div>
-                    </a>
-                </div>
-                <div class="menu-figura">
-                    <a href="tabela_kalinowski.html" target="obszar_glowny">
                         <div id="czerwony_trojkat"></div>
                     </a>
                 </div>
                 <div class="menu-figura">
-                    <a href="forrmularz_kalinowski.html" target="obszar_glowny">
-                        <div id="zolty_okrag"></div>
+                    <a href="tabela_kalinowski.html" target="obszar_glowny">
+                        <div id="niebieski_prostokat"></div>
                     </a>
                 </div>
                 <div class="menu-figura">
-                    <a href="mailto:nikodem1234@outlook.com">
-                        <div id="zielony_prostokat"></div>
+                    <a href="forrmularz_kalinowski.html" target="obszar_glowny">
+                        <div id="zolty_trojkat"></div>
+                    </a>
+                </div>
+                <div class="menu-figura">
+                    <a href="mailto:szyjasinr1@gmail.com">
+                        <div id="zielony_okrag"></div>
                     </a>
                 </div>
                 <div class="menu-figura">
