--- a/index.html
+++ b/index.html
@@ -75,22 +75,22 @@
                 </ul>
             </td>
             <td align="center">
-                <iframe width="650" height="420" name="obszar_glowny" src="glowny_kalinowski.html" scrolling="yes" border="0"></iframe>
+                <iframe width="650" height="420" name="obszar_glowny" src="glowny_jasinski.html" scrolling="yes" border="0"></iframe>
             </td>
             <td width="18%" align="center">
                 <b>prawe menu</b>
                 <div class="menu-figura">
-                    <a href="kalinowski_zip" download>
+                    <a href="jasinski_zip" download>
                         <div id="czerwony_trojkat"></div>
                     </a>
                 </div>
                 <div class="menu-figura">
-                    <a href="tabela_kalinowski.html" target="obszar_glowny">
+                    <a href="tabela_jasinski.html" target="obszar_glowny">
                         <div id="niebieski_prostokat"></div>
                     </a>
                 </div>
                 <div class="menu-figura">
-                    <a href="forrmularz_kalinowski.html" target="obszar_glowny">
+                    <a href="forrmularz_jasinski.html" target="obszar_glowny">
                         <div id="zolty_trojkat"></div>
                     </a>
                 </div>
@@ -100,7 +100,7 @@
                     </a>
                 </div>
                 <div class="menu-figura">
-                    <a href="z1_z6_kalinowski.html" target="obszar_glowny">
+                    <a href="z1_z6_jasinski.html" target="obszar_glowny">
                         <div id="brazowy_prostokat"></div>
                     </a>
                 </div>
@@ -108,7 +108,7 @@
         </tr>
         <tr>
             <td colspan="3" align="center">
-               <iframe scrolling="no" width="900" height="120" name="obszar_stopka" src="stopka_kalinowski.html" border="0"></iframe>
+               <iframe scrolling="no" width="900" height="120" name="obszar_stopka" src="stopka_jasinski.html" border="0"></iframe>
             </td>
         </tr>
     </table>
