--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <td width="18%" align="center">
                 <b>prawe menu</b>
                 <div class="menu-figura">
-                    <a href="jasinski_zip" download>
+                    <a href="jasinski_zip.zip" download>
                         <div id="czerwony_trojkat"></div>
                     </a>
                 </div>
