--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </a>
                 </div>
                 <div class="menu-figura">
-                    <a href="forrmularz_jasinski.html" target="obszar_glowny">
+                    <a href="formularz_jasinski.html" target="obszar_glowny">
                         <div id="zolty_trojkat"></div>
                     </a>
                 </div>
@@ -108,7 +108,7 @@
         </tr>
         <tr>
             <td colspan="3" align="center">
-               <iframe scrolling="no" width="900" height="120" name="obszar_stopka" src="stopka_jasinski.html" border="0"></iframe>
+               <iframe scrolling="no" width="800" height="100" name="obszar_stopka" src="stopka_jasinski.html" border="0"></iframe>
             </td>
         </tr>
     </table>
