--- a/stopka_jasinski.html
+++ b/stopka_jasinski.html
@@ -2,17 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Stopka</title>
+    <title>Stopka </title>
 </head>
 <body>
-    <h3 align="center">Stopka - Kalinowski</h3>
+    <h3 align="center">Stopka Jasinski</h3>
     <p align="center">Gdańsk, 20 stycznia 2025 r.</p>
     <div align="center">
-        <!-- www.DarmowyLicznik.pl -->
         <div class="image-rotator">
             <div class="rotator-slide" id="rotator-slide-1">
-                <a href="https://www.darmowylicznik.pl/" title="Przejdź na stronę licznika" target="_blank">
-                    <img src="https://www.darmowylicznik.pl/licznik.php?id=148090" alt="Darmowy licznik odwiedzin" style="border:0px;" />
+                <a href="https://www.darmowylicznik.pl" title="Strona Licznika" target="_blank">
+                    <img src="https://www.darmowylicznik.pl/licznik.php?id=148090" alt="Licznik Odwiedzin" style="border:1px;" />
                 </a>
             </div>
         </div>
