--- a/logo_jasinski.html
+++ b/logo_jasinski.html
@@ -5,15 +5,15 @@
     <title>Logo</title>
     <style>
         .logo {
-            font-family: Arial, sans-serif;
+            font-family: Script, sans-serif;
             text-align: center;
 
             width: 200px;
-            margin: 5px auto;
-            padding: 8px;
+            margin: 7px auto;
+            padding: 10px;
         }
         .logo h1 {
-            color: gree;
+            color: black;
             font-size: 20px;
         }
         .logo p {
@@ -24,8 +24,8 @@
 </head>
 <body>
     <div class="logo">
-        <h1>Kalinowski</h1>
-        <p>Fajna strona</p>
+        <h1>Jasinski</h1>
+        <p>Fajna stronka</p>
     </div>
 </body>
 </html>
