--- a/formularz_jasinski.html
+++ b/formularz_jasinski.html
@@ -7,12 +7,12 @@
     <style>
         body {
             font-family: 'Verdana', sans-serif;
-            background-color: #d0e7ff;
+            background-color: #b5ffd5;
             margin: 20px;
         }
         .formularz {
             background-color: #ffffff; 
-            border: 2px solid #6aa8ff; 
+            border: 2px solid #b9ff81; 
             padding: 20px;
             border-radius: 10px;
             width: 600px;
