--- a/stopka_jasinski.html
+++ b/stopka_jasinski.html
@@ -10,8 +10,8 @@
     <div align="center">
         <div class="image-rotator">
             <div class="rotator-slide" id="rotator-slide-1">
-                <a href="https://www.darmowylicznik.pl" title="Strona Licznika" target="_blank">
-                    <img src="https://www.darmowylicznik.pl/licznik.php?id=148090" alt="Licznik Odwiedzin" style="border:1px;" />
+<div class="image-rotator"><div class="rotator-slide" id="rotator-slide-1"><a href="https://www.darmowylicznik.pl/" title="Przejdź na stronę licznika" target="_blank">
+<img src="https://www.darmowylicznik.pl/licznik.php?id=148108" alt="Darmowy licznik odwiedzin" style="border:0px;" /></a></div></div>
                 </a>
             </div>
         </div>
