--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 <ul>
                     <li><a href="https://zse.edu.gdansk.pl/" target="obszar_glowny">Strona ZSE</a></li>
                     <li><a href="https://www.kuratorium.gda.pl/" target="obszar_glowny">Kuratorium</a></li>
-                    <li><a href="https://simple.wikipedia.org/" target="obszar_glowny">Strona Piłkarska</a></li>
-                    <li><a href="https://www.futbin.com" target="obszar_glowny">Wikipedia</a></li>
+                    <li><a href="https://pl.wikipedia.org/wiki/Wikipedia:Strona_główna" target="obszar_glowny">Wikipedia</a></li>
+                    <li><a href="https://www.trojmiasto.pl" target="obszar_glowny">Wiadomosci z Trojmiasta</a></li>
                 </ul>
             </td>
             <td align="center">
