--- a/glowny_jasinski.html
+++ b/glowny_jasinski.html
@@ -9,15 +9,15 @@
     <p align="center">Data: 23 stycznia 2025 r.</p>
     <p align="center">Jasinski</p>
 <marquee bgcolor="red">Gorące Pozdrowienia Szymek </marquee>
-    Layout (interfejs strony internetowej) – element konstrukcji graficznej, w którym ustala się:
-
-1. rozmieszczenie elementów (treści) na stronie.
-2. wygląd (kolorystykę, elementy dekoracyjne, krój czcionki)
-
-Popularne technologie Layoutu dla stron WWW
-
-1. w oparciu o tabele (iframe) lub ramy (frame)
-2. w oparciu o DIV’y
-3. w oparciu o instrukcje HTML5 (nav, ……….)
+   <li> Layout (interfejs strony internetowej) – element konstrukcji graficznej, w którym ustala się:</li>
+<br>
+<li>1. rozmieszczenie elementów (treści) na stronie.</li>
+<li>2. wygląd (kolorystykę, elementy dekoracyjne, krój czcionki)</li>
+<br>
+<li>Popularne technologie Layoutu dla stron WWW<li>
+<br>
+<li>1. w oparciu o tabele (iframe) lub ramy (frame)</li>
+<li>2. w oparciu o DIV’y</li>
+<li>3. w oparciu o instrukcje HTML5 (nav, ……….)</li>
 </body>
 </html>
