--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                     <li><a href="https://www.kuratorium.gda.pl/" target="obszar_glowny">Kuratorium</a></li>
                     <li><a href="https://pl.wikipedia.org/wiki/Wikipedia:Strona_główna" target="obszar_glowny">Wikipedia</a></li>
                     <li><a href="https://www.trojmiasto.pl" target="obszar_glowny">Wiadomosci z Trojmiasta</a></li>
-                    <li><a href="glowny_jasinski" target="obszar_glowny">Powrot do Glownej</a></li>
+                    <li><a href="glowny_jasinski.html" target="obszar_glowny">Powrot do Glownej</a></li>
+                    <li><a href="podpis_jasinski.mp4" target="obszar_glowny">Filmik Nazwisko</a></li>
                 </ul>
             </td>
             <td align="center">
